--- a/package.json
+++ b/package.json
@@ -4,18 +4,49 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
+		"lint": "eslint .",
+		"lint:fix": "eslint --fix .",
+		"lint:styles": "stylelint \"**/*.scss\" --config .stylelintrc.cjs",
+		"lint:styles:fix": "stylelint \"**/*.scss\" --config .stylelintrc.cjs --fix",
 		"start": "vite",
 		"build": "tsc && vite build",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"prepare": "husky"
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.9.1",
+		"@html-eslint/eslint-plugin": "^0.26.0",
+		"@html-eslint/parser": "^0.26.0",
+		"@stylistic/eslint-plugin-js": "^2.7.2",
+		"@types/eslint__js": "^8.42.3",
 		"@typescript-eslint/eslint-plugin": "^5.40.0",
 		"@typescript-eslint/parser": "^5.40.0",
-		"eslint": "^8.25.0",
-		"typescript": "^4.6.4",
+		"eslint": "^8.57.0",
+		"eslint-plugin-import": "^2.30.0",
+		"eslint-plugin-simple-import-sort": "^12.1.1",
+		"eslint-plugin-unused-imports": "^4.1.3",
+		"husky": "^9.1.5",
+		"lint-staged": "^15.2.10",
+		"postcss-selector-parser": "^6.1.2",
+		"stylelint": "^16.9.0",
+		"stylelint-config-rational-order": "^0.1.2",
+		"stylelint-config-recess-order": "^5.1.0",
+		"stylelint-config-standard": "^36.0.1",
+		"stylelint-config-standard-scss": "^13.1.0",
+		"stylelint-order": "^6.0.4",
+		"stylelint-semantic-groups": "^1.2.1",
+		"stylelint-use-logical": "^2.1.2",
+		"typescript": "4.6.4",
+		"typescript-eslint": "^8.4.0",
 		"vite": "^3.1.0"
 	},
 	"dependencies": {
+		"@kibibit/configit": "^2.11.1",
 		"phaser": "^3.55.2"
+	},
+	"lint-staged": {
+		"*.ts": "npm run lint:fix",
+		"*.js": "npm run lint:fix",
+		"*.scss": "npm run lint:styles:fix"
 	}
 }
