--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
 		"lint:styles": "stylelint \"**/*.scss\" --config .stylelintrc.cjs",
 		"lint:styles:fix": "stylelint \"**/*.scss\" --config .stylelintrc.cjs --fix",
 		"start": "vite",
-		"build": "tsc && vite build",
+		"build": "tsc && vite build && npm run scss",
 		"preview": "vite preview",
-		"prepare": "husky"
+		"prepare": "husky",
+		"scss": "sass scss/style.scss css/style.css",
+		"scss:watch": "npm run scss -- --watch",
+    "scss:minify": "npm run scss -- --style compressed"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.1",
 		"@html-eslint/eslint-plugin": "^0.26.0",
 		"@html-eslint/parser": "^0.26.0",
 		"@stylistic/eslint-plugin-js": "^2.7.2",
-		"@types/eslint__js": "^8.42.3",
 		"@typescript-eslint/eslint-plugin": "^5.40.0",
 		"@typescript-eslint/parser": "^5.40.0",
 		"eslint": "^8.57.0",
@@ -28,6 +30,7 @@
 		"husky": "^9.1.5",
 		"lint-staged": "^15.2.10",
 		"postcss-selector-parser": "^6.1.2",
+		"sass": "^1.78.0",
 		"stylelint": "^16.9.0",
 		"stylelint-config-rational-order": "^0.1.2",
 		"stylelint-config-recess-order": "^5.1.0",
@@ -36,7 +39,7 @@
 		"stylelint-order": "^6.0.4",
 		"stylelint-semantic-groups": "^1.2.1",
 		"stylelint-use-logical": "^2.1.2",
-		"typescript": "4.6.4",
+		"typescript": "^5.5.4",
 		"typescript-eslint": "^8.4.0",
 		"vite": "^3.1.0"
 	},
